--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to The Little Taco Shop</h1>
+        <h1>Welcome to The Little Taco</h1>
         <nav aria-labelledby="primary">
             <ul id="primary">
                 <li>
